--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 These are some articles, reports, and documents I wrote for various reasons or projects.
 I'm just keeping it here for reference and to make sure I find them whenever I need to update any of them.
 
+Yousef Raffah
+Sept. 2013
 
